Made progress functionalizing T-f1, still not perfect

--- a/appendix2-T-F1.qmd
+++ b/appendix2-T-F1.qmd
@@ -5,7 +5,7 @@ format:
     page-layout: full
 ---
 
-## Manchester, John Rylands Library, French 6
+# Manchester, John Rylands Library, French 6
 
 Digitization available via The University of Manchester [HERE](https://luna.manchester.ac.uk/luna/servlet/detail/Man4MedievalVC~4~4~994331~227074?sort=reference_number%2Cimage_sequence_number%2Cparent_work_title%2Cdate_created&qvq=q:French%206;sort:reference_number%2Cimage_sequence_number%2Cparent_work_title%2Cdate_created;lc:Man4MedievalVC~4~4&mi=1&trs=4).
 
@@ -14,11 +14,10 @@ Digitization available via The University of Manchester [HERE](https://luna.manc
 library(xml2)
 ```
 
-::: {.column-page-outset}
-::: {layout="[[6,6,6,6]]"}
+::: {.column-page-outset layout="[[6,6,6,6]]"}
 
 ::: {.column}
-### Nearly Diplomatic
+## Nearly Diplomatic
 
 ```{r tf1-nearly-diplomatic, results='asis'}
 # START OF "NEARLY DIPLOMATIC" CODE
@@ -85,491 +84,42 @@ cat(formatted_text)
 :::
 
 ::: {.column}
-### Minimal
+## Minimal
 
-```{r tf1-minimal, results='asis'}
-# START OF "MINIMAL" CODE
-# Read the XML content
-xml_file <- read_xml("data/T-F1.xml")
+```{r}
+source("convert-xml-to-html.R")
+```
 
-# Extract both <l>, <cb>, and <pb> elements
-lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
 
-# Initialize an empty list to store the processed lines
-processed_lines <- list()
+```{r results='asis'}
 
-# Initialize line counter
-line_count <- 0
 
-# Function to process each element
-process_line <- function(line) {
-  # Handle page breaks differently
-  if (xml_name(line) == "pb") {
-    # Get folio number and format as standalone line
-    folio_num <- xml_attr(line, "n")
-    return(sprintf("<div class='folio-number'>%s</div>", folio_num))
-  }
-  
-  # Only increment line count for verse lines
-  if (xml_name(line) == "l") {
-    line_count <<- line_count + 1
-      
-    # SPECIAL CASE: Hard-code line v.134 to fix nesting tags issue
-    if (line_count == 134) {
-      return("<div style='line-height: 1.2;'>sentdonouet dono vent gnt colees .</div>")
-    }
-    
-    # Add line number div every 5th line
-    line_number <- if (line_count %% 5 == 0) {
-      sprintf("<div class='line-number'>%d</div>", line_count)
-    } else {
-      ""
-    }
-  } else {
-    line_number <- ""
-  }
-  
-  # Process emph elements (decorative initials)
-  emph_elements <- xml_find_all(line, ".//emph")
-  for (emph in emph_elements) {
-    # Get the initial letter text
-    initial_letter <- xml_text(emph)
-    
-    # Get the size attribute (n) and style attribute (rend)
-    size_attr <- xml_attr(emph, "n")
-    style_attr <- xml_attr(emph, "rend")
-    
-    # Create the HTML for the styled initial
-    styled_initial <- sprintf('<span class="decorative-initial %s" data-size="%s">%s</span>', 
-                             style_attr, size_attr, initial_letter)
-    
-    # Replace the emph element with the styled HTML
-    xml_text(emph) <- styled_initial
-  }
-  
-  # Find all <choice> elements within the line
-  choices <- xml_find_all(line, ".//choice")
-  for (choice in choices) {
-    # Extract the text from the <orig> tag
-    orig_text <- xml_text(xml_find_first(choice, ".//orig"))
-    # Remove the <choice> element and replace it with the text from the <orig> tag
-    xml_set_text(choice, paste0(orig_text, " "))
-  }
-  
-  # Now we want to remove any <reg> elements entirely
-  reg_elements <- xml_find_all(line, ".//reg")
-  xml_remove(reg_elements)
-  
-  # Replace <lb/> tags with HTML line break
-  lb_elements <- xml_find_all(line, ".//lb")
-  for (lb in lb_elements) {
-    xml_set_text(lb, "")
-  }
-  
-  # Return line with number if applicable - using xml_text() instead of as.character()
-  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
-                line_number, xml_text(line)))
-}
-
-# Process each line and wrap with <div class='column-break'> at each <cb/>
-for (line in lines) {
-  if (xml_name(line) == "cb") {
-    # Add a closing </div> for the previous column and an opening <div> for the new column
-    processed_lines <- c(processed_lines, "</div>", "<div class='column-break'>")
-  } else {
-    # Process the line and add it to the current column
-    processed_lines <- c(processed_lines, process_line(line))
-  }
-}
-
-# Process lines and wrap in edition-text div
-formatted_text <- paste(c("<div class='edition-text'>", processed_lines, "</div>"), collapse = "\n")
-cat(formatted_text)
+# PRINT "MINIMAL" VERSION
+convert_xml_to_html(xml_file = "data/T-F1.xml", version_name = "minimal")
 
 ```
 
 :::
 
 ::: {.column}
-### Intermediate
+## Intermediate
 
-```{r tf1-intermediate, results='asis'}
-# START OF "INTERMEDIATE" CODE
-# Read the XML content
-xml_file <- read_xml("data/T-F1.xml")
-
-# Extract the <l>, <cb>, and <pb> elements inside the <text> element
-lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
-
-# Initialize an empty list to store the processed lines
-processed_lines <- list()
-
-# Initialize line counter
-line_count <- 0
-
-# Function to process each element
-process_line <- function(line) {
-  # Handle page breaks differently
-  if (xml_name(line) == "pb") {
-    # Get folio number and format as standalone line
-    folio_num <- xml_attr(line, "n")
-    return(sprintf("<div class='folio-number'>%s</div>", folio_num))
-  }
-  
-  # Only increment line count for verse lines
-  if (xml_name(line) == "l") {
-    line_count <<- line_count + 1
-      
-    # SPECIAL CASE: Hard-code line v.2 to correct accent
-    if (line_count == 2) {
-      return("<div style='line-height: 1.2;'>U il ni ad si verite nun .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.3 to correct accent
-    if (line_count == 3) {
-      return("<div style='line-height: 1.2;'>Tuite est faite de verite .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.8 to correct spacing
-    if (line_count == 8) {
-      return("<div style='line-height: 1.2;'>Sapar ole est aspre & dure .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.10 to correct apostrophe
-    if (line_count == 10) {
-      return("<div style='line-height: 1.2;'><span class='line-number'>10</span>e por sa amor mei escoter .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.13 to correct accent
-    if (line_count == 13) {
-      return("<div style='line-height: 1.2;'>Ke co sacent tuit peccheur .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.22 to correct accent
-    if (line_count == 22) {
-      return("<div style='line-height: 1.2;'>cil pecche nert ja pardone .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.15 to correct spacing
-    if (line_count == 15) {
-      return("<div style='line-height: 1.2;'><span class='line-number'>15</span>Quenul pecche est tant granz .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.36 to correct apostrophe
-    if (line_count == 36) {
-      return("<div style='line-height: 1.2;'>Qui tuz jurz dort & nent se veille .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.38 to correct apostrophe
-    if (line_count == 38) {
-      return("<div style='line-height: 1.2;'>Desquil sent al quer la mort .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.65 to correct apostrophe
-    if (line_count == 65) {
-      return("<div style='line-height: 1.2;'><span class='line-number'>65</span>Por co quele esteit bele & gente .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.67 to correct apostrophe
-    if (line_count == 67) {
-      return("<div style='line-height: 1.2;'>Quele fe seit tot sun pleisir .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.99 to correct apostrophe
-    if (line_count == 99) {
-      return("<div style='line-height: 1.2;'>Desquele out passe duze anz .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.115 to correct spacing
-    if (line_count == 115) {
-      return("<div style='line-height: 1.2;'><span class='line-number'>115</span>Tuit enveneient al bordal .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.128 to correct apostrophe
-    if (line_count == 128) {
-      return("<div style='line-height: 1.2;'>e rent si espris de samor .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.131 to correct apostrophe
-    if (line_count == 131) {
-      return("<div style='line-height: 1.2;'>por co quil erent si ami .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.134 to fix nesting tags issue
-    if (line_count == 134) {
-      return("<div style='line-height: 1.2;'>sentredonouent dono vent grant colees .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.138 to correct spacing
-    if (line_count == 138) {
-      return("<div style='line-height: 1.2;'>Nule pour nen enperneit .</div>")
-    }
-    
-    # SPECIAL CASE: Hard-code line v.156 to correct apostrophe
-    if (line_count == 156) {
-      return("<div style='line-height: 1.2;'>Si cum est en lescripture .</div>")
-    }
-    
-    # Add line number div every 5th line
-    line_number <- if (line_count %% 5 == 0) {
-      sprintf("<div class='line-number'>%d</div>", line_count)
-    } else {
-      ""
-    }
-  } else {
-    line_number <- ""
-  }
-  
-  # Process emph elements (decorative initials)
-  emph_elements <- xml_find_all(line, ".//emph")
-  for (emph in emph_elements) {
-    # Get the initial letter text
-    initial_letter <- xml_text(emph)
-    
-    # Get the size attribute (n) and style attribute (rend)
-    size_attr <- xml_attr(emph, "n")
-    style_attr <- xml_attr(emph, "rend")
-    
-    # Create the HTML for the styled initial
-    styled_initial <- sprintf('<span class="decorative-initial %s" data-size="%s">%s</span>', 
-                             style_attr, size_attr, initial_letter)
-    
-    # Replace the emph element with the styled HTML
-    xml_text(emph) <- styled_initial
-  }
-  
-  # Find all <choice> elements within the line
-  choices <- xml_find_all(line, ".//choice")
-  for (choice in choices) {
-    # Check if the <choice> element contains <abbr> and <expan>
-    abbr_exists <- xml_find_first(choice, ".//abbr")
-    expan_exists <- xml_find_first(choice, ".//expan")
-    
-    if (!is.na(abbr_exists) && !is.na(expan_exists)) {
-      # If <abbr> and <expan> tags exist, extract only the <reg> text from <expan>
-      reg_text <- xml_text(xml_find_first(choice, ".//expan/reg"))
-      xml_set_text(choice, paste0(reg_text, " "))
-    } else {
-      # For non-abbreviation choices, keep original behavior
-      orig_text <- xml_text(xml_find_first(choice, ".//orig"))
-      xml_set_text(choice, paste0(orig_text, " "))
-    }
-  }
-  
-  # Now we want to remove any <reg> elements entirely
-  reg_elements <- xml_find_all(line, ".//reg")
-  xml_remove(reg_elements)
-  
-  # Replace <lb/> tags with HTML line break
-  lb_elements <- xml_find_all(line, ".//lb")
-  for (lb in lb_elements) {
-    xml_set_text(lb, "")
-  }
-  
-  # Return line with number if applicable - using xml_text() instead of as.character()
-  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
-                line_number, xml_text(line)))
-}
-
-# Process each line and wrap with <div class='column-break'> at each <cb/>
-for (line in lines) {
-  if (xml_name(line) == "cb") {
-    # Add a closing </div> for the previous column and an opening <div> for the new column
-    processed_lines <- c(processed_lines, "</div>", "<div class='column-break'>")
-  } else {
-    # Process the line and add it to the current column
-    processed_lines <- c(processed_lines, process_line(line))
-  }
-}
-
-# Process lines and wrap in edition-text div
-formatted_text <- paste(c("<div class='edition-text'>", processed_lines, "</div>"), collapse = "\n")
-cat(formatted_text)
+```{r results='asis'}
+# PRINT "INTERMEDIATE VERSION"
+convert_xml_to_html(xml_file = "data/T-F1.xml", version_name = "intermediate")
 
 ```
 
 :::
 
 ::: {.column}
-### Extensive
+## Extensive
 
-```{r tf1-extensive, results='asis'}
-# START OF "EXTENSIVE" CODE
-# Read the XML content
-xml_file <- read_xml("data/T-F1.xml")
-
-# Extract the <l>, <cb>, and <pb> elements inside the <text> element
-lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
-
-# Initialize an empty list to store the processed lines
-processed_lines <- list()
-
-# Initialize line counter
-line_count <- 0
-
-# Function to process each element
-process_line <- function(line) {
-  # Handle page breaks differently
-  if (xml_name(line) == "pb") {
-    # Get folio number and format as standalone line
-    folio_num <- xml_attr(line, "n")
-    return(sprintf("<div class='folio-number'>%s</div>", folio_num))
-  }
-  
-  # Only increment line count for verse lines
-  if (xml_name(line) == "l") {
-    line_count <<- line_count + 1
-      
-    # SPECIAL CASE: Hard-code line v.4 to correct spacing
-    if (line_count == 4) {
-      return("<div style='line-height: 1.2;'>n'i ad un mot de falseté .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.11 to correct spacing
-    if (line_count == 11) {
-      return("<div style='line-height: 1.2;'>De ma dame seinte Marie .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.41 to correct spacing
-    if (line_count == 41) {
-      return("<div style='line-height: 1.2;'>a tart ad pris le repentir .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.68 to correct spacing
-    if (line_count == 68) {
-      return("<div style='line-height: 1.2;'>Ne li menbrout pas de morir .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.73 to correct spacing
-    if (line_count == 73) {
-      return("<div style='line-height: 1.2;'>Sis peres & sa mere viveient .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.75 to correct spacing
-    if (line_count == 75) {
-      return("<div style='line-height: 1.2;'><span class='line-number'>75</span>Il la voleient chastier .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.83 to correct spacing
-    if (line_count == 83) {
-      return("<div style='line-height: 1.2;'>Pur Deu te pri file Marie .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.96 to correct spacing
-    if (line_count == 96) {
-      return("<div style='line-height: 1.2;'>Quant ad fait tel engendrure .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.103 to correct spacing
-    if (line_count == 103) {
-      return("<div style='line-height: 1.2;'>Tuit sun parenté deguerpit .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.134 to fix nesting tags issue
-    if (line_count == 134) {
-      return("<div style='line-height: 1.2;'>s’entredonouent grant colees .</div>")
-    } 
-      
-    # SPECIAL CASE: Hard-code line v.135 to correct spacing
-    if (line_count == 135) {
-      return("<div style='line-height: 1.2;'><span class='line-number'>135</span>Del sanc qui esteit espandu .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.139 to correct spacing
-    if (line_count == 139) {
-      return("<div style='line-height: 1.2;'>Si un moreit de ses amis .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.150 to correct spacing
-    if (line_count == 150) {
-      return("<div style='line-height: 1.2;'><span class='line-number'>150</span>La chaitive dis & set anz .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.151 to correct spacing
-    if (line_count == 151) {
-      return("<div style='line-height: 1.2;'>La vile ert de li enpeire .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.153 to correct spacing
-    if (line_count == 153) {
-      return("<div style='line-height: 1.2;'>e le pais tut envirun .</div>")
-    }
-      
-    # SPECIAL CASE: Hard-code line v.164 to correct spacing
-    if (line_count == 164) {
-      return("<div style='line-height: 1.2;'>Mes blanches erent a merveilles .</div>")
-    }
-    
-    # Add line number div every 5th line
-    line_number <- if (line_count %% 5 == 0) {
-      sprintf("<div class='line-number'>%d</div>", line_count)
-    } else {
-      ""
-    }
-  } else {
-    line_number <- ""
-  }
-  
-  # Process emph elements (decorative initials)
-  emph_elements <- xml_find_all(line, ".//emph")
-  for (emph in emph_elements) {
-    # Get the initial letter text
-    initial_letter <- xml_text(emph)
-    
-    # Get the size attribute (n) and style attribute (rend)
-    size_attr <- xml_attr(emph, "n")
-    style_attr <- xml_attr(emph, "rend")
-    
-    # Create the HTML for the styled initial
-    styled_initial <- sprintf('<span class="decorative-initial %s" data-size="%s">%s</span>', 
-                             style_attr, size_attr, initial_letter)
-    
-    # Replace the emph element with the styled HTML
-    xml_text(emph) <- styled_initial
-  }
-  
-  # Now we want to remove any <orig> elements entirely
-  orig_elements <- xml_find_all(line, ".//orig")
-  xml_remove(orig_elements)
-  
-  # Find all <choice> elements within the line
-  choices <- xml_find_all(line, ".//choice")
-  for (choice in choices) {
-    # Extract the text from the <reg> tag
-    reg_text <- xml_text(xml_find_first(choice, ".//reg"))
-    # Replace the <choice> element with the text from the <reg> tag
-    xml_set_text(choice, paste0(" ", reg_text, " "))
-  }
-  
-  # Replace <lb/> tags with HTML line break
-  lb_elements <- xml_find_all(line, ".//lb")
-  for (lb in lb_elements) {
-    xml_set_text(lb, "")
-  }
-  
-  # Return line with number if applicable - using xml_text() instead of as.character()
-  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
-                line_number, xml_text(line)))
-}
-
-# Process each line and wrap with <div class='column-break'> at each <cb/>
-for (line in lines) {
-  if (xml_name(line) == "cb") {
-    # Add a closing </div> for the previous column and an opening <div> for the new column
-    processed_lines <- c(processed_lines, "</div>", "<div class='column-break'>")
-  } else {
-    # Process the line and add it to the current column
-    processed_lines <- c(processed_lines, process_line(line))
-  }
-}
-
-# Process lines and wrap in edition-text div
-formatted_text <- paste(c("<div class='edition-text'>", processed_lines, "</div>"), collapse = "\n")
-cat(formatted_text)
+```{r results='asis'}
+#PRINT "EXTENSIVE" VERSION
+convert_xml_to_html(xml_file = "data/T-F1.xml", version_name = "extensive")
 
 ```
-
-:::
 
 :::
 
